# rlf

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
arkanoid/: CMakeLists.txt  main.cpp
arkanoid/Node/Ball/: BallNode.cpp  BallNode.hpp
arkanoid/Node/Block/: BlockNode.cpp  BlockNode.hpp
arkanoid/Node/Game/: GameManagerNode.cpp  GameManagerNode.hpp  MainMenuManagerNode.cpp  MainMenuManagerNode.hpp
arkanoid/Node/Player/: PlayerNode.cpp  PlayerNode.hpp
arkanoid/assets/world/: MainMenu.json  game.json
cmake/: CompilerFlags.cmake
exteroids/: CMakeLists.txt  main.cpp
exteroids/Node/Asteroid/: AsteroidNode.cpp  AsteroidNode.hpp
exteroids/Node/Enemy/: EnemyNode.cpp  EnemyNode.hpp
exteroids/Node/Game/: GameManagerNode.cpp  GameManagerNode.hpp  MainMenuManagerNode.cpp  MainMenuManagerNode.hpp
exteroids/Node/Player/: PlayerBulletNode.cpp  PlayerBulletNode.hpp  PlayerNode.cpp  PlayerNode.hpp
exteroids/assets/: BaseNode.json
exteroids/assets/world/: MainMenu.json  game.json
game/Ball/: BallNode.cpp  BallRenderNode.cpp
game/Environment/: WallNode.cpp  WallRenderNode.cpp  WallRenderNode.hpp
game/Player/: PlayerNode.cpp  PlayerRenderNode.cpp
pong/: CMakeLists.txt  UIManagerNode.cpp  UIManagerNode.hpp  main.cpp
pong/Ball/: BallNode.cpp  BallNode.hpp  BallRenderNode.cpp  BallRenderNode.hpp
pong/Environment/: WallNode.cpp  WallNode.hpp  WallRenderNode.cpp  WallRenderNode.hpp
pong/Player/: PlayerNode.cpp  PlayerNode.hpp  PlayerRenderNode.cpp  PlayerRenderNode.hpp
pong/assets/: BaseNode.json
pong/assets/world/: pong.json
rlf/: CMakeLists.txt  pch.hpp  precompiled.hpp
rlf/Config/: Config.h.in
rlf/Engine/: Engine.cpp  Engine.hpp  EngineConfig.hpp  EngineImpl.hpp
rlf/Event/: BaseEvent.hpp  EventManager.cpp  EventManager.hpp  NodeCreatedEvent.hpp
rlf/Game/Ball/: BallNode.cpp  BallNode.hpp  BallRenderNode.cpp  BallRenderNode.hpp
rlf/Game/Environment/: WallNode.cpp  WallNode.hpp  WallRenderNode.cpp
rlf/Game/Player/: PlayerNode.cpp  PlayerNode.hpp  PlayerRenderNode.cpp
rlf/Manager/: TypeManager.cpp  TypeManager.hpp
rlf/Node/: BaseNode.cpp  BaseNode.hpp  BaseNodeDefines.hpp  BaseNodeImpl.hpp  Node.hpp  NodeBase.cpp  NodeBase.hpp  NodeHandle.hpp  NodeInclude.hpp  NodeManager.cpp  NodeManager.hpp  NodePool.hpp
rlf/Node/Audio/: MusicNode.cpp  MusicNode.hpp  SoundNode.cpp  SoundNode.hpp
rlf/Node/Enemy/: EnemyNode.cpp  EnemyNode.hpp  EnemyRenderNode.cpp  EnemyRenderNode.hpp
rlf/Node/Physics/: BoxColliderNode.cpp  BoxColliderNode.hpp  CircleColliderNode.cpp  CircleColliderNode.hpp  ColliderNode.cpp  ColliderNode.hpp  LineColliderNode.cpp  LineColliderNode.hpp  RigidbodyNode.cpp  RigidbodyNode.hpp  SphereColliderNode.cpp  SphereColliderNode.hpp
rlf/Node/Player/: PlayerBulletNode.cpp  PlayerBulletNode.hpp  PlayerBulletRenderNode.cpp  PlayerBulletRenderNode.hpp  PlayerNode.cpp  PlayerNode.hpp  PlayerRenderNode.cpp  PlayerRenderNode.hpp
rlf/Node/Render/: BurstParticleRenderNode.cpp  BurstParticleRenderNode.hpp  CameraNode.cpp  CameraNode.hpp  CircleRenderNode.cpp  CircleRenderNode.hpp  LineRenderNode.cpp  LineRenderNode.hpp  ParticleRenderNode.cpp  ParticleRenderNode.hpp  QuadRenderNode.cpp  QuadRenderNode.hpp  RenderNode.cpp  RenderNode.hpp  SphereRenderNode.cpp  SphereRenderNode.hpp  SpriteRenderNode.cpp  SpriteRenderNode.hpp
rlf/Node/Renderable/: RenderableNode.cpp  RenderableNode.hpp
rlf/Node/UI/: UIButtonNode.cpp  UIButtonNode.hpp  UICameraNode.cpp  UICameraNode.hpp  UINode.cpp  UINode.hpp  UISliderNode.cpp  UISliderNode.hpp  UISpriteNode.cpp  UISpriteNode.hpp  UITextNode.cpp  UITextNode.hpp
rlf/NodeManager/: NodeManager.cpp  NodeManager.hpp  NodePool.hpp
rlf/NodeSystem/: NodeDestroyer.hpp  NodeRenderer.hpp  NodeUpdater.hpp
rlf/Resource/: FontResource.cpp  FontResource.hpp  IResource.cpp  IResource.hpp  MusicResource.cpp  MusicResource.hpp  SoundResource.cpp  SoundResource.hpp  TextureResource.cpp  TextureResource.hpp
rlf/System/: ISystem.cpp  ISystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  RendererSystem.cpp  RendererSystem.hpp  SystemManager.cpp  SystemManager.hpp  SystemTable.hpp  TypeSystem.cpp  TypeSystem.hpp
rlf/System/Audio/: AudioSystem.cpp  AudioSystem.hpp
rlf/System/Editor/: EditorSystem.cpp  EditorSystem.hpp  EditorSystem_FileBrowser.cpp  EditorSystem_Gizmo.cpp  EditorSystem_Hierarchy.cpp  ImGuiAccessor.hpp
rlf/System/Physics/: CollideInfo.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp
rlf/System/Render/: RenderSystem.cpp  RenderSystem.hpp
rlf/System/Resource/: ResourceSystem.cpp  ResourceSystem.hpp
rlf/System/Type/: TypeSystem.cpp  TypeSystem.hpp
rlf/Util/: Color.cpp  Color.hpp  Json.hpp  Math.cpp  Math.hpp  Range.hpp  Singleton.hpp  Types.hpp  UUID.cpp  UUID.hpp  Util.cpp  Util.hpp
rlf/Util/Accessor/: JsonDeserializer.cpp  JsonDeserializer.hpp  JsonSerializer.cpp  JsonSerializer.hpp
rlf/Util/Math/: Angle.cpp  Angle.hpp  Mat4.hpp  Math.hpp  Quat.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
rlf/Util/Physics/: CollisionDetection.cpp  CollisionDetection.hpp
rlf/Util/Reflection/: NamedValue.cpp  NamedValue.hpp  Reflection.hpp  TypeName.hpp
rlf/Util/Traits/: FunctionTraits.hpp  MemberTraits.hpp
